[package]
name = "facilitest"
version = "0.1.1"
authors = ["Stefan Scheller <ste.scheller@gmail.com>"]
repository = "https://github.com/SteScheller/facilitest"
edition = "2021"
description = "Utilities that facilitate testing"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
facilitest-macros = { version="0.1.0", path = "src/macros" }