[package]
name = "facilitest"
version = "1.0.0"
authors = ["Stefan Scheller <ste.scheller@gmail.com>"]
repository = "https://github.com/SteScheller/facilitest"
edition = "2021"
description = "Utilities that facilitate testing"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
facilitest-macros = { version="1.0.0", path = "src/macros" }